Update readme file

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,5 +4,5 @@ SECRET="notesapp786&*^"
 NODE_ENV="development" # 'production' for hosting
 FRONTEND_URL="http://localhost:5173"
 
-NODE_MAILER_EMAIL="legendhacker422@gmail.com"
-NODE_MAILER_EMAIL_PASSWORD="bunfktmozraxhvjl"
+NODE_MAILER_EMAIL="YOUR_SENDER_EMAIL"
+NODE_MAILER_EMAIL_PASSWORD="YOUR_SENDER_EMAIL_PASSWORD"
